# SMA

./: CLAUDE.md  README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
documentation/: README.md  REQUIREMENTS.md  database-design.md  implementation-plan.md  phase3-data-model.md  requirements.md  setup.md
documentation/features/: analyse-commands.md  database-browser.md  database-reset.md  flow-extraction.md  fuzzy-search.md  hello-command.md  interactive-session.md  metadata-sync.md  salesforce-authentication.md  shell-completion.md
src/sma/: cli.py  completion.py  database.py  interactive_session.py
src/sma/parsers/: __init__.py  flow_parser.py
src/sma/salesforce/: __init__.py  auth.py  connection.py  metadata.py
