[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sma"
version = "0.1.0"
description = "SMA - A SQLite-powered CLI application"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "click>=8.0.0",
    "click-pwsh>=0.9.5",
]

[project.scripts]
sma = "sma.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
